objects/ASI_CN_NPL_NPL_Request__c.object
<CustomObject>
    <description>ASI CN New Product Launch Request</description>
    <fields>
        <fullName>ASI_CN_NPL_Actual_ETA_MM__c</fullName>
        <label>ATA (M&amp;M)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Actual_ETA__c</fullName>
        <label>ATA (Domestic)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Approval_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field for sending approval email with attachment</description>
        <label>Approval In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Product_Launch_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Product_Launch_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Product_Launch_Requests6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Artwork_Brand_Owner_Date__c</fullName>
        <label>CH Label Artwork to Brand Owner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Artwork_Finalize_Date__c</fullName>
        <label>CH Label Artwork Final Date (Internal)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Attach_Base_Vol_Forecast__c</fullName>
        <formula>HYPERLINK(&quot;/apex/ASI_CN_NPL_ProductAttachPage?id=&quot;&amp;Id, &quot;Link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attach Base Volume Forecast</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Attachment_File_Size__c</fullName>
        <label>Attachment File Size</label>
        <summarizedField>ASI_CN_NPL_Product_Document__c.ASI_CN_NPL_File_Size__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_CN_NPL_Product_Document__c.ASI_CN_NPL_Attach_in_Approval__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CN_NPL_Product_Document__c.ASI_CN_NPL_Parent__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Available_Date_MM__c</fullName>
        <label>Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Available_Date__c</fullName>
        <label>Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Bar_Code_Bottle__c</fullName>
        <label>Bar Code: Bottle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Bar_Code_Box__c</fullName>
        <label>Bar Code: Box</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Bar_Code_Carton__c</fullName>
        <label>Bar Code: Carton</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Base_of_Volume_Forecast__c</fullName>
        <inlineHelpText>Please click on the link below to attach Volume Forecast.</inlineHelpText>
        <label>Base of Volume Forecast</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Brand_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Auto fill in by system</inlineHelpText>
        <label>Brand Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Product_Launch_Requests_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Brand_ToBeDeleted__c</fullName>
        <formula>ASI_CN_NPL_Sub_brand__r.ASI_CN_NPL_Brand_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand_ToBeDeleted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_CN_NPL_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Martell</fullName>
                </value>
                <value>
                    <fullName>Aberlour</fullName>
                </value>
                <value>
                    <fullName>Ballantine&apos;s</fullName>
                </value>
                <value>
                    <fullName>Chivas Regal</fullName>
                </value>
                <value>
                    <fullName>Clan Campbell</fullName>
                </value>
                <value>
                    <fullName>Glenlivet</fullName>
                </value>
                <value>
                    <fullName>Imperial</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Royal Salute</fullName>
                </value>
                <value>
                    <fullName>Wild Turkey</fullName>
                </value>
                <value>
                    <fullName>Brancott</fullName>
                </value>
                <value>
                    <fullName>Cafe De Paris</fullName>
                </value>
                <value>
                    <fullName>Campo Viejo</fullName>
                </value>
                <value>
                    <fullName>Chateau Cordeillan Bages</fullName>
                </value>
                <value>
                    <fullName>Chateau Villa</fullName>
                </value>
                <value>
                    <fullName>Cono Sur</fullName>
                </value>
                <value>
                    <fullName>Domaine</fullName>
                </value>
                <value>
                    <fullName>Dubonnet</fullName>
                </value>
                <value>
                    <fullName>Etchart</fullName>
                </value>
                <value>
                    <fullName>Graffigna</fullName>
                </value>
                <value>
                    <fullName>Helan Mountain</fullName>
                </value>
                <value>
                    <fullName>Jacob&apos;s Creek</fullName>
                </value>
                <value>
                    <fullName>Long Mountain</fullName>
                </value>
                <value>
                    <fullName>L&apos;Ostal Cazes</fullName>
                </value>
                <value>
                    <fullName>Louis Latour</fullName>
                </value>
                <value>
                    <fullName>Michel Lynch</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Pol Roger</fullName>
                </value>
                <value>
                    <fullName>Stoneleigh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Budget_Plan__c</fullName>
        <label>Budget Plan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_CR_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>Chinese Restaurant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Cash_Carry_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>Cash &amp; Carry - MOT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Category_ToBeDeleted__c</fullName>
        <formula>ASI_CN_NPL_Sub_brand__r.ASI_CN_NPL_Category_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category_ToBeDeleted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COGNAC</fullName>
                </value>
                <value>
                    <fullName>WHISKY</fullName>
                </value>
                <value>
                    <fullName>WINE</fullName>
                </value>
                <value>
                    <fullName>OTHERS</fullName>
                </value>
                <value>
                    <fullName>CHAMPAGNE</fullName>
                </value>
                <value>
                    <fullName>RTD</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Cert_Available_Date__c</fullName>
        <label>CH Label Cert. Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Chinese_Bar_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>Chinese Bar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Chinese_Name_Final__c</fullName>
        <label>Chinese Name (Final)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Chinese_Name_Proposal__c</fullName>
        <label>Chinese Name (Proposal)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Classification_Text__c</fullName>
        <description>Classification fill in using Trigger after insert</description>
        <label>Classification Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Classification__c</fullName>
        <formula>ASI_CN_NPL_Classification_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Comparable_PR_Product__c</fullName>
        <inlineHelpText>ASI_CN_NPL_Comparable_PR_Product</inlineHelpText>
        <label>Comparable PR Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Competitor__c</fullName>
        <label>Competitor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Contribution_Margin__c</fullName>
        <inlineHelpText>Please indicate either in data RMB/btl (e.g. 100) or the text (e.g. similar to CR 12 70cl)</inlineHelpText>
        <label>Contribution Margin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Convenience_Store_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>Convenience Store</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Currency__c</fullName>
        <formula>TEXT(CurrencyIsoCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Department_Store_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>Department Store - TOT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Deputy_Managing_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Auto fill in by system</inlineHelpText>
        <label>Managing Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Product_Launch_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Destination_Domestic__c</fullName>
        <label>Destination (Domestic)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Destination_M_M__c</fullName>
        <label>Destination (M&amp;M)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Domestic_ActualDepletionMonth__c</fullName>
        <label>Domestic Actual Depletion Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Domestic_Launch_Date__c</fullName>
        <label>Justification: When (Domestic)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_ETA_Packing__c</fullName>
        <label>Packing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_E_Commerce_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>E-Commerce - EC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Email10__c</fullName>
        <label>Email10</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Email11__c</fullName>
        <label>Email11</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Email12__c</fullName>
        <label>Email12</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Email_Notification_Template__c</fullName>
        <label>Email Notification Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_English_Name_Final__c</fullName>
        <label>English Name (Final)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_English_Name_Proposal__c</fullName>
        <label>English Name (Proposal)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Estimate_Available_Date__c</fullName>
        <label>Estimate Customer Clearence Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_FKTV_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>FKTV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Final_Approval_Date__c</fullName>
        <label>Final Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Final_Proposed_Selling_Price__c</fullName>
        <label>Final Proposed Selling Price to T1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Finance_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Auto fill in by system</inlineHelpText>
        <label>Finance Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Product_Launch_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Geography_Priority__c</fullName>
        <label>Geography Priority</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central-Jiangsu/Anhui</fullName>
                </value>
                <value>
                    <fullName>Central-Shanghai(Div)</fullName>
                </value>
                <value>
                    <fullName>Central-ZJ North</fullName>
                </value>
                <value>
                    <fullName>Central-ZJ South</fullName>
                </value>
                <value>
                    <fullName>Central-All</fullName>
                </value>
                <value>
                    <fullName>East-Fuzhou.</fullName>
                </value>
                <value>
                    <fullName>East-Jiangxi/Zhangzhou/Longyan</fullName>
                </value>
                <value>
                    <fullName>East-Quanzhou.</fullName>
                </value>
                <value>
                    <fullName>East-Xiamen.</fullName>
                </value>
                <value>
                    <fullName>East-All</fullName>
                </value>
                <value>
                    <fullName>North-Beijing.</fullName>
                </value>
                <value>
                    <fullName>North-Hebei/Shanxi</fullName>
                </value>
                <value>
                    <fullName>North-Heilongjian/Jilin/Liaoning</fullName>
                </value>
                <value>
                    <fullName>North-Tianjin/Shandong/Inner Mongolia</fullName>
                </value>
                <value>
                    <fullName>North-All</fullName>
                </value>
                <value>
                    <fullName>NW-Gansu/Ningxia/Qinghai</fullName>
                </value>
                <value>
                    <fullName>NW-Hubei/Henan</fullName>
                </value>
                <value>
                    <fullName>NW-Shaanxi/Xinjiang</fullName>
                </value>
                <value>
                    <fullName>NW-All</fullName>
                </value>
                <value>
                    <fullName>South-Guangdong East</fullName>
                </value>
                <value>
                    <fullName>South-Guangdong West/Hainan</fullName>
                </value>
                <value>
                    <fullName>South-Guangzhou/Shaoguan/Guangxi</fullName>
                </value>
                <value>
                    <fullName>South-Hunan(Div)</fullName>
                </value>
                <value>
                    <fullName>South-All</fullName>
                </value>
                <value>
                    <fullName>SW-Sichuan/Yungui/Tibet</fullName>
                </value>
                <value>
                    <fullName>MM-Macau(Div)</fullName>
                </value>
                <value>
                    <fullName>MM-Mongolia(Div)</fullName>
                </value>
                <value>
                    <fullName>MM-All</fullName>
                </value>
                <value>
                    <fullName>Domestic-All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Grocery_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>Grocery - TOT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Gross_Weight__c</fullName>
        <label>Gross Weight (kg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_HQActualDelpetionMonth__c</fullName>
        <label>HQ Actual Depletion Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_HQ_Launch_Date__c</fullName>
        <label>HQ Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Hypermarket_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>Hypermarket - MOT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_IHBR_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>IHBR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Interspace_Ratio_Limits_Email__c</fullName>
        <formula>IF( ASI_CN_NPL_Interspace_Ratio_Limits__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interspace Ratio Limit (Email)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Interspace_Ratio_Limits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interspace Ratio Limits &lt;=55%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Invoice_Receipt_Date_MM__c</fullName>
        <label>Invoice Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Invoice_Receipt_Date__c</fullName>
        <label>Invoice Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Is_Brand_New_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is brand new product that does not fill in current category and sub-brand?</inlineHelpText>
        <label>Is Brand New Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Item_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Master</label>
        <referenceTo>ASI_CN_NPL_Item_Master__c</referenceTo>
        <relationshipLabel>New Product Launch Requests</relationshipLabel>
        <relationshipName>New_Product_Launch_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Justification_Market__c</fullName>
        <label>Justification: Market</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Macau</fullName>
                </value>
                <value>
                    <fullName>Mongolia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_KTV_Priority__c</fullName>
        <inlineHelpText>Priority 1: Most important channel for the product both on volume and image building(无论从销量还是形象都是最重要渠道) 
Priority 2: Important channel on volume(重要渠道,贡献销量) 
Priority 3: Penetration channel(铺货渗透渠道)</inlineHelpText>
        <label>KTV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_MM_Launch_Date__c</fullName>
        <label>Justification: When (Macau)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_MacMongo_ActualDepletionMonth__c</fullName>
        <label>Macau&amp;Mongolia Actual Depletion Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Marketing_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Auto fill in by system</inlineHelpText>
        <label>Marketing Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Product_Launch_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_National_Sales_Dev_VP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Auto fill in by system</inlineHelpText>
        <label>National Sales Dev VP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>New_Product_Launch_RequestsigR4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_No_of_Layout_Limit_3_Email__c</fullName>
        <formula>IF( ASI_CN_NPL_No_of_Layout_Limit_3__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Layout Limit &lt;=3 (Email)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_No_of_Layout_Limit_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No. of Layout Limit &lt;=3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Off_Trade_Percent__c</fullName>
        <inlineHelpText>Sum of all channels % should be 100%</inlineHelpText>
        <label>Off Trade %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Old_Stock_Start_Date__c</fullName>
        <label>Old Stock Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_On_Trade_Percent__c</fullName>
        <inlineHelpText>Sum of all channels % should be 100%</inlineHelpText>
        <label>On Trade %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_PO_Released_Date_MM__c</fullName>
        <label>PO Released Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_PO_Released_Date__c</fullName>
        <label>PO Released Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_PRC_Own_Line__c</fullName>
        <label>PRC Own Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Packing_Photo_Count__c</fullName>
        <label>Packing Photo Count</label>
        <summarizedField>ASI_CN_NPL_Product_Document__c.ASI_CN_NPL_Packing_Photo_Count__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_CN_NPL_Product_Document__c.ASI_CN_NPL_Packing_Photo_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CN_NPL_Product_Document__c.ASI_CN_NPL_Parent__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Packing__c</fullName>
        <label>Packing (bottle x size)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Pre_Approval_Date__c</fullName>
        <label>Pre-Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Pricing_Strategy_Bar__c</fullName>
        <inlineHelpText>Please input at least one Pricing Strategy</inlineHelpText>
        <label>Bar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CN_NPL_Pricing_Strategy_CR__c</fullName>
        <inlineHelpText>Please input at least one Pricing Strategy</inlineHelpText>
        <label>CR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>